--- a/Numerico.ipynb
+++ b/Numerico.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWBT0vb3psyXQawKJm+8gP",
+      "authorship_tag": "ABX9TyNKc279ldJ1KOldzKkzIWi8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc0d78f6-5c62-4305-927d-f56111344b65"
+        "outputId": "77ed1a79-eecf-4f41-af63-ba4f4d73ad4e"
       },
       "execution_count": 1,
       "outputs": [
@@ -135,10 +135,27 @@
         "df.head(3)"
       ],
       "metadata": {
-        "id": "3eS9OZmJ3Ku-"
+        "id": "3eS9OZmJ3Ku-",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 200
+        },
+        "outputId": "a2d47cbf-01b0-414f-9505-b3f410779a3a"
       },
-      "execution_count": 26,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-80-777d943a51e0>\u001b[0m in \u001b[0;36m<cell line: 20>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;31m#df_media\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m \u001b[0mdf_media\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'DataFrame' object is not callable"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -168,9 +185,9 @@
           "height": 483
         },
         "id": "KNqv5Ytxau7E",
-        "outputId": "cdcd01af-7818-4c8f-eafe-e87c3b352dce"
+        "outputId": "c17eca8b-081a-459f-bcf4-80051df19f34"
       },
-      "execution_count": 25,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +197,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -193,6 +210,106 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Metodo dos minimos quardrados para prever a quantidade de casos**"
+      ],
+      "metadata": {
+        "id": "i-807VsyT5jZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pandas._libs.tslibs import timestamps\n",
+        "import numpy as np\n",
+        "\n",
+        "_df['date'].dt.day\n",
+        "_df['g1'] = _df['date'].dt.day * _df['date'].dt.day\n",
+        "_df['g2'] = _df['date'].dt.day\n",
+        "_df['y'] =   _df['newCases']\n",
+        "_df['previsao']= np.nan\n",
+        "_df['erro_relativo']= np.nan\n",
+        "\n",
+        "g3= np.ones(21) # nem precisava disso\n",
+        "g1g1 = g1g2 = g1g3 = g2g3 = g3g3 = yg1 = yg2 = yg3= g2g2 = g3g3 = 0 #serão  os valores da matriz 3x3\n",
+        "\n",
+        "for i in _df.itertuples():\n",
+        "  #acumula os valores moveis de 21 dias dos G's e dos YG's\n",
+        " g1g1+= i.g1*i.g1\n",
+        " g1g2+= i.g1*i.g2\n",
+        " g1g3+= i.g1*g3[1]\n",
+        " g2g2+= i.g2*i.g2\n",
+        " g2g3+= i.g2*g3[1]\n",
+        " g3g3+= g3[1]*g3[1]\n",
+        " yg1+=  i.g1*i.y\n",
+        " yg2+=  i.g2*i.y\n",
+        " yg3+=  i.y*g3[1]\n",
+        "\n",
+        " # quando passar dos 21 dias, ira calcular o dia 21\n",
+        " if(i.day>21):\n",
+        "\n",
+        "  A= np.array([[g1g1, g1g2,g1g3],[g1g2,g2g2,g2g3],[g1g3,g2g3,g3g3]])\n",
+        "  b= np.array([[yg1],[yg2],[yg3]])\n",
+        "\n",
+        "  funcEstimativa = np.linalg.solve(A,b) #resolve o sistema linear\n",
+        "  previsao = (i.day**2)*(funcEstimativa[0]) + i.day*(funcEstimativa[1])+ (funcEstimativa[2]) #calcula apartir da função o valor estimado 'a previsão'\n",
+        "\n",
+        "  #tira dos aculadores o valor de 21 dias atras, para que assim a função seja baseada somente nos 21 dias anteriores\n",
+        "  g1g1 -= _df.loc[i.Index-21].g1 * _df.loc[i.Index-21].g1\n",
+        "  g1g2 -= _df.loc[i.Index-21].g1 * _df.loc[i.Index-21].g2\n",
+        "  g1g3 -= _df.loc[i.Index-21].g1\n",
+        "  g2g2 -= _df.loc[i.Index-21].g2 * _df.loc[i.Index-21].g2\n",
+        "  g2g3 -= _df.loc[i.Index-21].g2\n",
+        "  g3g3 -= 1\n",
+        "  yg1 -= _df.loc[i.Index-21].g1 * _df.loc[i.Index-21].y\n",
+        "  yg2 -=  _df.loc[i.Index-21].g2 * _df.loc[i.Index-21].y\n",
+        "  yg3 -= _df.loc[i.Index-21].y\n",
+        "\n",
+        "  _df.loc[i.Index].previsao = previsao\n",
+        "  _df.loc[i.Index].erro_relativo= ((previsao - _df.loc[i.Index].newCases)/ _df.loc[i.Index].newCases)\n",
+        "\n",
+        " _df\n"
+      ],
+      "metadata": {
+        "id": "6W99txQJTGsH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0e92a5d2-4ae1-480f-9a8f-cf93b3025e8e"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-81-3aa76fb2aa14>:46: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  _df.loc[i.Index].previsao=previsao\n",
+            "<ipython-input-81-3aa76fb2aa14>:47: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  _df.loc[i.Index].erro_relativo= ((previsao - _df.loc[i.Index].newCases)/ _df.loc[i.Index].newCases)\n",
+            "<ipython-input-81-3aa76fb2aa14>:47: RuntimeWarning: divide by zero encountered in true_divide\n",
+            "  _df.loc[i.Index].erro_relativo= ((previsao - _df.loc[i.Index].newCases)/ _df.loc[i.Index].newCases)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sMAkezrzYuy7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
