--- a/Numerico.ipynb
+++ b/Numerico.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwC3pGsWQAyL6fIwO1q2qk",
+      "authorship_tag": "ABX9TyPKHvqPhRoSicngQZwp8SIM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,9 +75,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bc486ee1-91a5-4fb3-d985-abf654841831"
+        "outputId": "3d40fe4e-6180-4e51-c1af-976bd342aff1"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,9 +140,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "94a222fb-923b-454d-e5f3-b94266d2ab1c"
+        "outputId": "3926403d-1a90-48ce-f591-8fb7978bf197"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +156,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-b43bdc83-5acc-4baa-9ae0-00b21b808648\">\n",
+              "  <div id=\"df-4ad17ab8-cd26-41af-a89a-6ad69619eb7b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -203,7 +203,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b43bdc83-5acc-4baa-9ae0-00b21b808648')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4ad17ab8-cd26-41af-a89a-6ad69619eb7b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -216,8 +216,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-b499d8a5-c576-4934-a34a-d353447d213a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b499d8a5-c576-4934-a34a-d353447d213a')\"\n",
+              "    <div id=\"df-e0d978db-a770-4e41-b7f0-0a2be7882f26\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e0d978db-a770-4e41-b7f0-0a2be7882f26')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -274,7 +274,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-b499d8a5-c576-4934-a34a-d353447d213a button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-e0d978db-a770-4e41-b7f0-0a2be7882f26 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -321,12 +321,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-b43bdc83-5acc-4baa-9ae0-00b21b808648 button.colab-df-convert');\n",
+              "          document.querySelector('#df-4ad17ab8-cd26-41af-a89a-6ad69619eb7b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-b43bdc83-5acc-4baa-9ae0-00b21b808648');\n",
+              "          const element = document.querySelector('#df-4ad17ab8-cd26-41af-a89a-6ad69619eb7b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -380,9 +380,9 @@
           "height": 483
         },
         "id": "KNqv5Ytxau7E",
-        "outputId": "1776559e-35dc-48e6-a5ff-8848b614060d"
+        "outputId": "a82919df-fb86-4ebc-ae0a-77494c1ba050"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,55 +481,42 @@
         "  _df.iloc[[i.Index],-1]= float(erro_relativo)\n",
         "\n",
         "\n",
-        "\n",
-        "\n"
+        "dfinal= _df[[\"date\",\"newCases\",\"previsao\",\"erro_relativo\",\"newCases_7d\"]]\n",
+        "dfinal\n"
       ],
       "metadata": {
         "id": "6W99txQJTGsH",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 687
         },
-        "outputId": "c558a438-f5c8-4555-c569-9c40378bc907"
+        "outputId": "cdd50919-95e6-4dab-cdb4-cf44036f3797"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "          date  newCases  totalCases  newCases_7d  day  month   g1  g2   y  \\\n",
-              "0   2022-01-01         2       19470          NaN    1      1    1   1   2   \n",
-              "1   2022-01-02         1       19471          NaN    2      1    4   2   1   \n",
-              "2   2022-01-03         4       19475          NaN    3      1    9   3   4   \n",
-              "3   2022-01-04        56       19531          NaN    4      1   16   4  56   \n",
-              "4   2022-01-05        27       19558          NaN    5      1   25   5  27   \n",
-              "..         ...       ...         ...          ...  ...    ...  ...  ..  ..   \n",
-              "360 2022-12-27        71       28979    16.571429   27     12  729  27  71   \n",
-              "361 2022-12-28        54       29033    23.142857   28     12  784  28  54   \n",
-              "362 2022-12-29        28       29061    25.571429   29     12  841  29  28   \n",
-              "363 2022-12-30        57       29118    32.285714   30     12  900  30  57   \n",
-              "364 2022-12-31         0       29118    32.285714   31     12  961  31   0   \n",
+              "          date  newCases   previsao  erro_relativo  newCases_7d\n",
+              "0   2022-01-01         2        NaN            NaN          NaN\n",
+              "1   2022-01-02         1        NaN            NaN          NaN\n",
+              "2   2022-01-03         4        NaN            NaN          NaN\n",
+              "3   2022-01-04        56        NaN            NaN          NaN\n",
+              "4   2022-01-05        27        NaN            NaN          NaN\n",
+              "..         ...       ...        ...            ...          ...\n",
+              "360 2022-12-27        71  18.632411       0.737572    16.571429\n",
+              "361 2022-12-28        54  33.453557       0.380490    23.142857\n",
+              "362 2022-12-29        28  28.090909       0.003247    25.571429\n",
+              "363 2022-12-30        57  41.737154       0.267769    32.285714\n",
+              "364 2022-12-31         0  35.098814       1.000000    32.285714\n",
               "\n",
-              "      previsao  erro_relativo  \n",
-              "0          NaN            NaN  \n",
-              "1          NaN            NaN  \n",
-              "2          NaN            NaN  \n",
-              "3          NaN            NaN  \n",
-              "4          NaN            NaN  \n",
-              "..         ...            ...  \n",
-              "360  18.632411       0.737572  \n",
-              "361  33.453557       0.380490  \n",
-              "362  28.090909       0.003247  \n",
-              "363  41.737154       0.267769  \n",
-              "364  35.098814       1.000000  \n",
-              "\n",
-              "[365 rows x 11 columns]"
+              "[365 rows x 5 columns]"
             ],
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-3ad28306-2d09-4a0e-8a41-c889a3ef9ffa\">\n",
+              "  <div id=\"df-d2b97793-42a5-4157-9fe5-0e76812cb68e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -551,15 +538,9 @@
               "      <th></th>\n",
               "      <th>date</th>\n",
               "      <th>newCases</th>\n",
-              "      <th>totalCases</th>\n",
-              "      <th>newCases_7d</th>\n",
-              "      <th>day</th>\n",
-              "      <th>month</th>\n",
-              "      <th>g1</th>\n",
-              "      <th>g2</th>\n",
-              "      <th>y</th>\n",
               "      <th>previsao</th>\n",
               "      <th>erro_relativo</th>\n",
+              "      <th>newCases_7d</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -567,13 +548,7 @@
               "      <th>0</th>\n",
               "      <td>2022-01-01</td>\n",
               "      <td>2</td>\n",
-              "      <td>19470</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
@@ -581,13 +556,7 @@
               "      <th>1</th>\n",
               "      <td>2022-01-02</td>\n",
               "      <td>1</td>\n",
-              "      <td>19471</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
@@ -595,13 +564,7 @@
               "      <th>2</th>\n",
               "      <td>2022-01-03</td>\n",
               "      <td>4</td>\n",
-              "      <td>19475</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>9</td>\n",
-              "      <td>3</td>\n",
-              "      <td>4</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
@@ -609,13 +572,7 @@
               "      <th>3</th>\n",
               "      <td>2022-01-04</td>\n",
               "      <td>56</td>\n",
-              "      <td>19531</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>4</td>\n",
-              "      <td>1</td>\n",
-              "      <td>16</td>\n",
-              "      <td>4</td>\n",
-              "      <td>56</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
@@ -623,13 +580,7 @@
               "      <th>4</th>\n",
               "      <td>2022-01-05</td>\n",
               "      <td>27</td>\n",
-              "      <td>19558</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>5</td>\n",
-              "      <td>1</td>\n",
-              "      <td>25</td>\n",
-              "      <td>5</td>\n",
-              "      <td>27</td>\n",
               "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
@@ -640,88 +591,52 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>360</th>\n",
               "      <td>2022-12-27</td>\n",
               "      <td>71</td>\n",
-              "      <td>28979</td>\n",
-              "      <td>16.571429</td>\n",
-              "      <td>27</td>\n",
-              "      <td>12</td>\n",
-              "      <td>729</td>\n",
-              "      <td>27</td>\n",
-              "      <td>71</td>\n",
               "      <td>18.632411</td>\n",
               "      <td>0.737572</td>\n",
+              "      <td>16.571429</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>361</th>\n",
               "      <td>2022-12-28</td>\n",
               "      <td>54</td>\n",
-              "      <td>29033</td>\n",
-              "      <td>23.142857</td>\n",
-              "      <td>28</td>\n",
-              "      <td>12</td>\n",
-              "      <td>784</td>\n",
-              "      <td>28</td>\n",
-              "      <td>54</td>\n",
               "      <td>33.453557</td>\n",
               "      <td>0.380490</td>\n",
+              "      <td>23.142857</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>362</th>\n",
               "      <td>2022-12-29</td>\n",
               "      <td>28</td>\n",
-              "      <td>29061</td>\n",
-              "      <td>25.571429</td>\n",
-              "      <td>29</td>\n",
-              "      <td>12</td>\n",
-              "      <td>841</td>\n",
-              "      <td>29</td>\n",
-              "      <td>28</td>\n",
               "      <td>28.090909</td>\n",
               "      <td>0.003247</td>\n",
+              "      <td>25.571429</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>363</th>\n",
               "      <td>2022-12-30</td>\n",
               "      <td>57</td>\n",
-              "      <td>29118</td>\n",
-              "      <td>32.285714</td>\n",
-              "      <td>30</td>\n",
-              "      <td>12</td>\n",
-              "      <td>900</td>\n",
-              "      <td>30</td>\n",
-              "      <td>57</td>\n",
               "      <td>41.737154</td>\n",
               "      <td>0.267769</td>\n",
+              "      <td>32.285714</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>364</th>\n",
               "      <td>2022-12-31</td>\n",
               "      <td>0</td>\n",
-              "      <td>29118</td>\n",
-              "      <td>32.285714</td>\n",
-              "      <td>31</td>\n",
-              "      <td>12</td>\n",
-              "      <td>961</td>\n",
-              "      <td>31</td>\n",
-              "      <td>0</td>\n",
               "      <td>35.098814</td>\n",
               "      <td>1.000000</td>\n",
+              "      <td>32.285714</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>365 rows × 11 columns</p>\n",
+              "<p>365 rows × 5 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ad28306-2d09-4a0e-8a41-c889a3ef9ffa')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d2b97793-42a5-4157-9fe5-0e76812cb68e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -734,8 +649,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-a798775d-e31c-468a-99de-f0d85daab618\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a798775d-e31c-468a-99de-f0d85daab618')\"\n",
+              "    <div id=\"df-13365062-58a3-45bb-a204-2f80a2022af1\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-13365062-58a3-45bb-a204-2f80a2022af1')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -792,7 +707,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-a798775d-e31c-468a-99de-f0d85daab618 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-13365062-58a3-45bb-a204-2f80a2022af1 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -839,12 +754,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-3ad28306-2d09-4a0e-8a41-c889a3ef9ffa button.colab-df-convert');\n",
+              "          document.querySelector('#df-d2b97793-42a5-4157-9fe5-0e76812cb68e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-3ad28306-2d09-4a0e-8a41-c889a3ef9ffa');\n",
+              "          const element = document.querySelector('#df-d2b97793-42a5-4157-9fe5-0e76812cb68e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -866,7 +781,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -884,9 +799,9 @@
           "height": 483
         },
         "id": "W-p_nGfHNbtG",
-        "outputId": "f8c1964c-1aaf-4409-ae53-86b75d3b48e3"
+        "outputId": "8d846aa7-3d36-461d-f068-81c647eab0d2"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -896,7 +811,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
